--- a/style-.css
+++ b/style-.css
@@ -9,6 +9,7 @@ body
 height: 100vh;*/
 background-image:url("https://images.unsplash.com/photo-1465101162946-4377e57745c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dGhlJTIwdW5pdmVyc2V8ZW58MHx8MHx8&w=1000&q=80");
 background-size: cover;
+background-color: linear-gradient(#1d2b4880, #4f426680);
 }
 
 
