--- a/style.css
+++ b/style.css
@@ -1,162 +1,191 @@
-html{
-perspective:800px;
+html {
+  perspective: 800px;
 
 }
 
-body
-{
-background-image:url("https://images.unsplash.com/photo-1465101162946-4377e57745c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dGhlJTIwdW5pdmVyc2V8ZW58MHx8MHx8&w=1000&q=80");
-background-size: cover;
-}
-
-
-
-
-
-/*top bar*//*top bar*//*top bar*//*top bar*//*top bar*//*top bar*//*top bar*//*top bar*//*top bar*//*top bar*/
-
-#top-bar{
-width: 100%;
-height:130px;
-top: 0;
-background-color: black;
-opacity:98%;
-position:relative;
-display:flex;
-justify-content: space-between;
-}
-
-#top-bar-sticky{
-width:100%;
-height:150px;
-position:sticky;
-top:0px;
-z-index:99999;
-}
-
-#top-bar-name{
-float:left;
-}
-
-#top-bar-title{
-font-size:25px;
-display:inline-box;
-flex-wrap:nowrap;
-text-align:top;
-margin-top:10px;
-margin-left:5px;
-}
-
-#TopBarRight{
-display:block;
-padding-bottom:0px;
-float:right;
-text-align:left;
-margin-right:5px;
-}
-
-
-#TopBarMenu{
-float:left;
-position:absolute;
-bottom:0;
-left:5px;
-}
-
-#TopBarMenu:hover #menu-list{display:block;}
-
-
-#TopBarMenuButton{
-width:50px;
-height:50px;
-border:2px solid white;
-background-color:black;
-position:absolute;
-bottom:0;
-}
-
-
-#menu-icon{
-text-align: center;
-vertical-align:top;
-line-height:3px;
-width:auto;
-height:auto;
-}
-
-#menu-icon span{
-display:inline-block;
-width:30px;
-height:3px;
-background-color:white;
-float:inherit;
-transition:0.2s;
-}
-
-#TopBarMenu:hover .span1{transform:matrix(0.5,0.4,0,1,-8,5);}
-#TopBarMenu:hover .span2{transform:matrix(0.5,-0.4,0,1,7,0);}
-
-#menu-list{
-background-color:black;
-width: 200px;
-top: 0px;
-position: absolute;
-border-width:1px 4px 4px 0px;
-border-style:groove;
-border-color:yellow;
-box-shadow:5px 5px 10px gold;
-display:none;
-}
-
-#menu-ul{
-padding-left:10px;
-}
-
-li{
-list-style:none;
-color: white;
-font-size:20px;
-}
-
-#menu-ul li:hover{
-font-size:35px;
-border-style:groove;
-border-color:yellow;
-box-shadow:5px 5px 10px gold;
+body {
+  background-image: url("https://images.unsplash.com/photo-1465101162946-4377e57745c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dGhlJTIwdW5pdmVyc2V8ZW58MHx8MHx8&w=1000&q=80");
+  background-size: cover;
 }
 
 
 
 
-/* carousel *//* carousel *//* carousel *//* carousel *//* carousel *//* carousel *//* carousel *//* carousel *//* carousel */
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
+/*top bar*/
 
-
-#carousel{
-width:100%;
-height:300px;
-background: linear-gradient(#1d2b4880, #4f426680);
-position:relative;
-top:0px;
-margin: 0 auto;
-display:flex;
-justify-content: space-around;
-align-items:center;
-overflow:hidden;
+#top-bar {
+  width: 100%;
+  height: 130px;
+  top: 0;
+  background-color: black;
+  opacity: 98%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
+#top-bar-sticky {
+  width: 100%;
+  height: 150px;
+  position: sticky;
+  top: 0px;
+  z-index: 99999;
+}
+
+#top-bar-name {
+  float: left;
+}
+
+#top-bar-title {
+  font-size: 25px;
+  display: inline-box;
+  flex-wrap: nowrap;
+  text-align: top;
+  margin-top: 10px;
+  margin-left: 5px;
+}
+
+#TopBarRight {
+  display: block;
+  padding-bottom: 0px;
+  float: right;
+  text-align: left;
+  margin-right: 5px;
+}
+
+
+#TopBarMenu {
+  float: left;
+  position: absolute;
+  bottom: 0;
+  left: 5px;
+}
+
+#TopBarMenu:hover #menu-list {
+  display: block;
+}
+
+
+#TopBarMenuButton {
+  width: 50px;
+  height: 50px;
+  border: 2px solid white;
+  background-color: black;
+  position: absolute;
+  bottom: 0;
+}
+
+
+#menu-icon {
+  text-align: center;
+  vertical-align: top;
+  line-height: 3px;
+  width: auto;
+  height: auto;
+}
+
+#menu-icon span {
+  display: inline-block;
+  width: 30px;
+  height: 3px;
+  background-color: white;
+  float: inherit;
+  transition: 0.2s;
+}
+
+#TopBarMenu:hover .span1 {
+  transform: matrix(0.5, 0.4, 0, 1, -8, 5);
+}
+
+#TopBarMenu:hover .span2 {
+  transform: matrix(0.5, -0.4, 0, 1, 7, 0);
+}
+
+#menu-list {
+  background-color: black;
+  width: 200px;
+  top: 0px;
+  position: absolute;
+  border-width: 1px 4px 4px 0px;
+  border-style: groove;
+  border-color: yellow;
+  box-shadow: 5px 5px 10px gold;
+  display: none;
+}
+
+#menu-ul {
+  padding-left: 10px;
+}
+
+li {
+  list-style: none;
+  color: white;
+  font-size: 20px;
+}
+
+#menu-ul li:hover {
+  font-size: 35px;
+  border-style: groove;
+  border-color: yellow;
+  box-shadow: 5px 5px 10px gold;
+}
+
+
+
+
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+/* carousel */
+
+#carousel {
+  width: 100%;
+  height: 300px;
+  background: linear-gradient(#1d2b4880, #4f426680);
+  position: relative;
+  top: 0px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  overflow: hidden;
+}
 
 .out {
   width: 800px;
   height: 200px;
   position: absolute;
-  top:50px;
-  flex-shrink:1;
+  top: 50px;
+  flex-shrink: 1;
 }
+
 .out .inner {
   width: 100%;
   height: 100%;
 
 }
+
 .out .inner .img {
   width: 400px;
   height: 200px;
@@ -164,34 +193,40 @@ overflow:hidden;
   transition: 0.3s;
 
 }
+
 .out .inner .img img {
   width: 100%;
   height: 100%;
 
 }
+
 .out .arrow {
-  font-size:32px;
-  width:100%;
-  position:absolute;
-  top:84px;
-  display:flex;
-  justify-content:space-between;
-  z-index:999;
+  font-size: 32px;
+  width: 100%;
+  position: absolute;
+  top: 84px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 999;
 }
+
 .out .arrow i {
-  display:inline-block;
+  display: inline-block;
   color: #fff;
   z-index: 9999;
   cursor: pointer;
 }
+
 .out .arrow .left {
-  position:sticky;
-  left:0px;
+  position: sticky;
+  left: 0px;
 }
+
 .out .arrow .right {
-  position:sticky;
-  right:0px;
+  position: sticky;
+  right: 0px;
 }
+
 .out .button {
   width: 175px;
   height: 15px;
@@ -200,7 +235,8 @@ overflow:hidden;
   left: 50%;
   transform: translateX(-50%);
 }
-.out .button carousel-buttons{
+
+.out .button carousel-buttons {
   width: 15px;
   height: 15px;
   float: left;
@@ -208,29 +244,35 @@ overflow:hidden;
   cursor: pointer;
   background-color: silver;
 }
+
 .out .button carousel-buttons:first-child {
   background-color: #1486bb;
 }
+
 .out #last {
   transform: translateX(0);
   z-index: 9;
   opacity: 1;
 }
+
 .out #first {
   transform: translateX(200px) scale(1.3);
   z-index: 99;
   opacity: 1;
 }
+
 .out #second {
   transform: translateX(400px);
   z-index: 9;
   opacity: 1;
 }
+
 .out #left {
   transform: translateX(-100px);
   z-index: 1;
   opacity: 0;
 }
+
 .out #right {
   transform: translateX(500px);
   z-index: 1;
@@ -238,206 +280,221 @@ overflow:hidden;
 }
 
 
-/* content *//* content *//* content *//* content *//* content *//* content *//* content *//* content *//* content */
 
-#content{
-width:100%;
-height:auto;
-background: linear-gradient(#1d2b4880, #4f426680);
-position:relative;
-top:20px;
-bottom:0;
-overflow: visible;
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: space-around;
-align-items: center;
-z-index:99;
+
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+/* content */
+
+#content {
+  width: 100%;
+  height: auto;
+  background: linear-gradient(#1d2b4880, #4f426680);
+  position: relative;
+  top: 20px;
+  bottom: 0;
+  overflow: visible;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 99;
 }
 
-#content div{
-width:300px;
-height:300px;
-border:5px solid linear-gradient(#1d2b4880, #4f426680);
-margin:20px 0;
+#content div {
+  width: 300px;
+  height: 300px;
+  border: 5px solid linear-gradient(#1d2b4880, #4f426680);
+  margin: 20px 0;
 }
 
-#content #cuboid{
-width:300px;
-height:182px;
-border:0;
-transform: rotateX(45deg) rotateZ(45deg);
-transform-style: preserve-3d;
-animation:rotate 30s infinite linear;
-margin-top:50px;
-
+#content #cuboid {
+  width: 300px;
+  height: 182px;
+  border: 0;
+  transform: rotateX(45deg) rotateZ(45deg);
+  transform-style: preserve-3d;
+  animation: rotate 30s infinite linear;
+  margin-top: 50px;
 }
 
-#content #cuboid:hover{
-animation-play-state:paused;
+#content #cuboid:hover {
+  animation-play-state: paused;
 }
 
-#cuboid div{
-width:300px;
-height:182px;
-position:absolute;
-border:0;
-display: flex;
-justify-content: center;
-align-items: center;
-opacity:0.8;
-
-}
-
-#cuboid .a1{
-transform: rotateX(90deg) translateZ(91px);
-}
-
-#cuboid .a2{
-transform: rotateX(-90deg) translateZ(91px);
-}
-
-#cuboid .b1{
-transform: translateZ(91px);
-}
-
-#cuboid .b2{
-transform: rotateY(180deg) rotateZ(180deg) translateZ(91px);
-}
-
-#cuboid .c1{
-transform: rotateY(90deg) rotateZ(-90deg) translateZ(150px);
-}
-
-#cuboid .c2{
-transform: rotateY(-90deg) rotateZ(-90deg) translateZ(150px);
-}
-
-@keyframes rotate{
-form{
-transform:rotateX(0) rotateZ(0)
-}
-to{
-transform:rotateX(10turn) rotateY(4turn);
-}
-}
-
-#c-block2{
-opacity:0.7;
-}
-
-
-#c-block3 .background{
-background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjhuL57DYxWVI2UvALtUOt0B2ymiPcs0t2AA&usqp=CAU");
-background-size: cover;
-background-position: 50% 50%;
-height:300px;
-font:900 10rem '';
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-position:absolute;
-text-align:center;
-overflow:hidden;
-margin:.1px 0;
+#cuboid div {
+  width: 300px;
+  height: 182px;
+  position: absolute;
+  border: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.8;
 
 }
 
-.background::before{
-content:'';
-background-size:cover;
-background-image:inherit;
-background-position:50% 50%;
-position:absolute;
-top:0;
-left:0;
-bottom:0;
-right:0;
-z-index:-99;
-margin:20px 0;
+#cuboid .a1 {
+  transform: rotateX(90deg) translateZ(91px);
+}
+
+#cuboid .a2 {
+  transform: rotateX(-90deg) translateZ(91px);
+}
+
+#cuboid .b1 {
+  transform: translateZ(91px);
+}
+
+#cuboid .b2 {
+  transform: rotateY(180deg) rotateZ(180deg) translateZ(91px);
+}
+
+#cuboid .c1 {
+  transform: rotateY(90deg) rotateZ(-90deg) translateZ(150px);
+}
+
+#cuboid .c2 {
+  transform: rotateY(-90deg) rotateZ(-90deg) translateZ(150px);
+}
+
+@keyframes rotate {
+  form {
+    transform: rotateX(0) rotateZ(0)
+  }
+
+  to {
+    transform: rotateX(10turn) rotateY(4turn);
+  }
+}
+
+#c-block2 {
+  opacity: 0.7;
+}
+
+#c-block3 .background {
+  background-image: url("https://i.ytimg.com/an/x69etlhievQ/8133645264963479382_mq.jpg?v=6132ba11");
+  background-size: cover;
+  background-position: 50% 50%;
+  height: 300px;
+  font: 900 10rem '';
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: absolute;
+  text-align: center;
+  overflow: hidden;
+  margin: .1px 0;
 
 }
 
+.background::before {
+  content: '';
+  background-size: cover;
+  background-image: inherit;
+  background-position: 50% 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -99;
+  margin: 20px 0;
 
-
-
-/*section*//*section*//*section*//*section*//*section*//*section*//*section*//*section*//*section*//*section*/
-
-section{
-    position:relative;
-    top:50px;
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #111;
-    overflow: display;
-}
-
-section .text{
-    position: relative;
-    background-color:black;
-    color: #fff;
-    margin: 20px;
-    max-width: 800px;
-    user-select: none;
-
-}
-
-section .text span-text{
-    position: relative;
-    display: text;
-    cursor: pointer;
-}
-
-section .text span-text.active{
-    animation: smoke 2s linear forwards;
-    transform-origin: bottom;
-    display: inline-block;
-}
-
-.show{
-    animation: show-letter .5s linear forwards;
-}
-
-@keyframes show-letter{
-    0%{
-        opacity: 0;
-        transform: rotate(0deg) scale(1);
-    }
-    50%{
-        opacity: 0.5;
-        transform: rotate(45deg) scale(1.1);
-    }
-
-    100%{
-        opacity: 1;
-        transform: rotate(0deg) scale(1);
-    }
-}
-
-@keyframes smoke{
-    0%{
-        opacity: 1;
-        filter: blur(0);
-        transform: translateX(0) translateY(0) rotate(0deg) scale(1);
-    }
-    100%{
-        opacity: 0;
-        filter: blur(20px);
-        transform: translateX(300px) translateY(-300px) rotate(720deg) scale(4);
-    }
 }
 
 
 
 
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
+/*section*/
 
+section {
+  position: relative;
+  top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #111;
+  overflow: display;
+}
 
+section .text {
+  position: relative;
+  background-color: black;
+  color: #fff;
+  margin: 20px;
+  max-width: 800px;
+  user-select: none;
 
+}
 
+section .text span-text {
+  position: relative;
+  display: text;
+  cursor: pointer;
+}
 
+section .text span-text.active {
+  animation: smoke 2s linear forwards;
+  transform-origin: bottom;
+  display: inline-block;
+}
 
+.show {
+  animation: show-letter .5s linear forwards;
+}
 
+@keyframes show-letter {
+  0% {
+    opacity: 0;
+    transform: rotate(0deg) scale(1);
+  }
 
+  50% {
+    opacity: 0.5;
+    transform: rotate(45deg) scale(1.1);
+  }
+
+  100% {
+    opacity: 1;
+    transform: rotate(0deg) scale(1);
+  }
+}
+
+@keyframes smoke {
+  0% {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0) translateY(0) rotate(0deg) scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    filter: blur(20px);
+    transform: translateX(300px) translateY(-300px) rotate(720deg) scale(4);
+  }
+}
